# static-merkle-tree

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
